# serializer version: 1
# name: TestGeospatial.test_altitude_along_slant_path[0.0-1.0-1.0]
  tuple(
    array([0.00000000e+00, 1.00010001e-04, 2.00020002e-04, ...,
         9.99799980e-01, 9.99899990e-01, 1.00000000e+00]),
    array([0.00000000e+00, 1.00010075e-04, 2.00020149e-04, ...,
         9.99799980e-01, 9.99899990e-01, 1.00000000e+00]),
  )
# ---
# name: TestGeospatial.test_altitude_along_slant_path[1.0-0.0-1.0]
  tuple(
    array([0.00000000e+00, 1.00010001e-04, 2.00020002e-04, ...,
         9.99799980e-01, 9.99899990e-01, 1.00000000e+00]),
    array([1.00000000e+00, 9.99899990e-01, 9.99799980e-01, ...,
         2.00020149e-04, 1.00010075e-04, 0.00000000e+00]),
  )
# ---
# name: TestGeospatial.test_altitude_along_slant_path[1.0-1.0-1.0]
  tuple(
    array([0.00000000e+00, 1.00010001e-04, 2.00020002e-04, ...,
         9.99799980e-01, 9.99899990e-01, 1.00000000e+00]),
    array([1., 1., 1., ..., 1., 1., 1.]),
  )
# ---
# name: TestGeospatial.test_curved_earth_slant_range[0.0-1.0-1.0]
  1.4142135623730951
# ---
# name: TestGeospatial.test_curved_earth_slant_range[1.0-0.0-1.0]
  1.4142135623730951
# ---
# name: TestGeospatial.test_curved_earth_slant_range[1.0-1.0-1.0]
  1.0
# ---
# name: TestGeospatial.test_ground_sample_distance[0.0-1.0]
  0.0
# ---
# name: TestGeospatial.test_ground_sample_distance[1.0-0.0]
  0.0
# ---
# name: TestGeospatial.test_ground_sample_distance[1.0-1.0]
  1.0
# ---
# name: TestGeospatial.test_ground_sample_distance[2.0-2.5]
  5.0
# ---
# name: TestGeospatial.test_nadir_angle[0.0-1.0-1.0]
  0.0
# ---
# name: TestGeospatial.test_nadir_angle[1.0-0.0-1.0]
  3.141592653589793
# ---
# name: TestGeospatial.test_nadir_angle[1.0-1.0-1.0]
  1.5707962484024436
# ---
